<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, DatumDroidOCRActivity!</string>
    <string name="app_name">GetText</string>
    <string name="button_text">take a new pic!</string>
    <string name="text_hint">See what we get</string>
    <string name="button_gallery">pick up a pic from gallery</string>
    <string name="translate">translate!</string>
    <string name="translatedText"> </string>
    <string name="input">Select the original language</string>
    <string name="output">Select the translated language</string>
    <string name="history">View History</string>
    <string name="save_history">Save To History</string>

</resources>